--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-ng-app="compliments">
+<html data-ng-app="angularComp">
 <head>
   <meta charset="UTF-8">
   <title>Emergency Compliment</title>
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>Emergency Compliment</h1>
-
+  <div data-ng-controller='mainController as vm'>
+  </div>
 </body>
 </html>
